# loom

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: cli.rs  config.rs  main.rs  scanner.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  hash.rs  lib.rs  manifest.rs  transform.rs
crates/server/: .gitignore  Cargo.toml  Makefile
crates/server/migrations/2026-02-28-202327-0000_users/: up.sql
crates/server/src/: main.rs
crates/server/src/api/: health.rs
crates/server/src/db/: mod.rs  schema.rs
crates/server/src/db/models/: user.rs
