[package]
name = "loom-client"
version = "0.1.0"
edition = "2024"

[dependencies]
loom-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
confy = "2.0.0"
dialoguer = "0.12.0"
serde_json = "1.0.149"
once_cell = "1.21.3"
walkdir = "2"

[dev-dependencies]
