[package]
name = "loom-server"
version = "0.1.0"
edition = "2024"

[dependencies]
loom-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
env = "1"
env_logger = "0.11"
log = "0.4.29"