[package]
name = "loom-server"
version = "0.1.0"
edition = "2024"

[dependencies]
loom-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4.29"
chrono = "0.4"

uuid = { version = "1.21.0", features = ["v4"] }

diesel = { version = "2.3", features = ["chrono", "r2d2", "numeric", "sqlite"] }
diesel_migrations = "2.3"
thiserror = "2"

